--- a/stuff/roulette/package.json
+++ b/stuff/roulette/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "cs-study-roulette",
+  "name": "CS-Study",
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "homepage": "https://cheesecat47.github.io/CS-Study",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/CS-Study",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.3.10"
@@ -21,6 +23,7 @@
     "daisyui": "^4.4.19",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "gh-pages": "^6.1.0",
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.6",
